2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Bump version number.
	* configure: Regenerate.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Do not create homonymous links from builddir to srcdir.
	* testsuite/Makefile.tests: Create readin.in2 here.
	* testsuite/Makefile.am: Do not distribute it.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>
 
	* autoboot.conf: Add rename.
	* gnulib: Update.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: XFAIL UTF-8 tests where appropriate.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/Makefile.tests: Handle CRLF endings for mingw.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Link readin.in2 into builddir.
	* configure: Regenerate.
	* doc/Makefile.am: Do not distribute sed.html.  Do not update
	sed.texi if the output does not change.
	* sed/Makefile.am: Order libraries according to their dependencies.
	* sed/compile.c (get_openfile): Declare FAIL as int.
	* sed/sed.c: Avoid printf ("") if REG_PERL is not defined.
	* testsuite/eval.in2: Do not include in the repository.
	* testsuite/Makefile.am: Clean always eval.in2 and never readin.in2.
	* testsuite/Makefile.tests: Provide a default empty definition of TIME
	and remove rules for readin.in2.

2009-03-31  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Add __bool_true_false_are_defined.
	* bootstrap.sh: Regenerate.
	* basicdefs.h: Do not provide bool definitions for BOOTSTRAP at all.

2009-03-31  Paolo Bonzini  <bonzini@gnu.org>

	* sed/sed.c (contact): New.
	(usage): From here.
	(main): Use it for `sed --version' too.

        * configure.ac: Point to GNU project mailing lists.
        * sed/sed.c (contact): Use PACKAGE_BUGREPORT.
        * testsuite/version.gin: Likewise.
        * testsuite/version.good: Regenerate.
        * doc/sed.1: Regenerate.

        * bootstrap.sh.in (PACKAGE_BUGREPORT): New.
        * bootstrap.sh: Regenerate.

2009-03-31  Paolo Bonzini  <bonzini@gnu.org>
